[package]
name = "shadowcast"
version = "0.1.0"
authors = ["Noah Ryan <nsmryan@gmail.com>"]
edition = "2018"
keywords = ["fov", "roguelike", "shadowcasting"]
description = "Simple implementation of the shadow casting FOV algorithm"
license = "CC0"
readme = "README.md"
repository = "https://github.com/nsmryan/shadowcasting"

[dependencies]
num-rational = { version = "0.3", default-features = false }

[lib]
name = "shadowcast"
path = "src/shadowcast.rs"
